--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ button {
 }
 #section-6 {
     display: flex;
+    position: absolute;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
@@ -179,4 +180,16 @@ button {
 .btn-container {
     display: flex;
     gap: 24px;
+}
+.video source {
+    width: 100%;
+    height: 100%;
+
+}
+.absolute {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
